--- a/frontend/style.css
+++ b/frontend/style.css
@@ -3,3 +3,32 @@
 body {
     background-color: blanchedalmond;
 }
+
+.label {
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    color: black;
+    text-align: center;
+}
+
+
+#results {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 100vw;
+    column-gap: 10px;
+    row-gap: 15px;
+    /* padding: 5px; */
+    /* background-color: orange; */
+}
+
+
+.recipe {
+    /* background-color: #ff9b28; */
+    align-self: center;
+    padding: 7px;
+}
+
+img {
+    width: 200px;
+}
